Fix wrapping on update detail page
Sometimes we get massively long lines from the update script
(particularly if there's an error) so ensure that long lines get
wrapped.

--- a/layerindex/static/css/additional.css
+++ b/layerindex/static/css/additional.css
@@ -267,6 +267,7 @@ td.info {
     background-color: transparent;
     border-style: none;
     padding: 0;
+    white-space: pre-wrap;
 }
 
 .td-pre {
